--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aws-config = {version = "1.1.4", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.14.0"
