--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 aws-config = {version = "1.1.4", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.14.0"
 serde = { version = "1.0.196", features = ["derive"] }
+serde_json = "1.0.112"
