--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ aws-sdk-s3 = "1.14.0"
 chrono = { version = "0.4.26", features = ["serde"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.112"
+sqlx = { version = "0.7.3", features = ["postgres"] }
