--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 aws-config = {version = "1.1.4", features = ["behavior-version-latest"] }
+aws-sdk-sqs = "1.14.0"
 aws-sdk-s3 = "1.14.0"
 chrono = { version = "0.4.26", features = ["serde"] }
 serde = { version = "1.0.196", features = ["derive"] }
