--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ aws-config = {version = "1.1.4", features = ["behavior-version-latest"] }
 aws-sdk-sqs = "1.14.0"
 aws-sdk-s3 = "1.14.0"
 chrono = { version = "0.4.26", features = ["serde"] }
+elasticsearch = "8.5.0-alpha.1"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.112"
 sqlx = { version = "0.7.3", features = ["chrono", "postgres"] }
